--- a/MyHomeApp/src/main/webapp/app/admin/user-management/list/user-management.component.html
+++ b/MyHomeApp/src/main/webapp/app/admin/user-management/list/user-management.component.html
@@ -76,24 +76,24 @@
           <td>{{ user.lastModifiedDate | date: 'dd/MM/yy HH:mm' }}</td>
           <td class="text-end">
             <div class="btn-group">
-              <button type="submit" [routerLink]="['./', user.login, 'view']" class="btn btn-info bg-info-app btn-sm">
+              <button type="submit" [routerLink]="['./', user.login, 'view']" class="btn btn-info bg-info-app ">
                 <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Vista</span>
+                <!-- <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Vista</span> -->
               </button>
 
-              <button type="submit" [routerLink]="['./', user.login, 'edit']" queryParamsHandling="merge" class="btn btn-primary btn-sm">
+              <button type="submit" [routerLink]="['./', user.login, 'edit']" queryParamsHandling="merge" class="btn btn-warning ">
                 <fa-icon icon="pencil-alt"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Editar</span>
+                <!-- <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Editar</span> -->
               </button>
 
               <button
                 type="button"
                 (click)="deleteUser(user)"
-                class="btn btn-danger btn-sm"
+                class="btn btn-danger "
                 [disabled]="!currentAccount || currentAccount.login === user.login"
               >
                 <fa-icon icon="times"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Eliminar</span>
+                <!-- <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Eliminar</span> -->
               </button>
             </div>
           </td>
