--- a/MyHomeApp/src/main/webapp/app/incidences/delete/delete-incidence.component.html
+++ b/MyHomeApp/src/main/webapp/app/incidences/delete/delete-incidence.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="incidence" name="deleteForm" (ngSubmit)="confirmDelete(incidence.id!)">
     <div class="modal-header">
-      <h4 class="modal-title" jhiTranslate="entity.delete.title">Confirmar operación de borrado</h4>
+      <h4 class="modal-title  text-color-white" jhiTranslate="entity.delete.title">Confirmar operación de borrado</h4>
   
       <button type="button" class="btn-close" data-dismiss="modal" aria-hidden="true" (click)="cancel()">&times;</button>
     </div>
