--- a/MyHomeApp/src/main/webapp/app/account/register/register.component.html
+++ b/MyHomeApp/src/main/webapp/app/account/register/register.component.html
@@ -223,14 +223,13 @@
         </button>
       </form>
 
-      <div class="mt-3 alert alert-warning">
+      <!-- <div class="mt-3 alert alert-warning">
         <span jhiTranslate="global.messages.info.authenticated.prefix">Si desea </span>
-        <a class="alert-link" routerLink="/login" jhiTranslate="global.messages.info.authenticated.link">iniciar sesión</a
-        ><span jhiTranslate="global.messages.info.authenticated.suffix"
-          >, puede intentar con las cuentas predeterminadas:<br />- Administrador (usuario="admin" y contraseña="admin") <br />- Usuario
-          (usuario="user" y contraseña="user").</span
-        >
-      </div>
+        <a class="alert-link" routerLink="/login" jhiTranslate="global.messages.info.authenticated.link">iniciar sesión</a>
+        <span jhiTranslate="global.messages.info.authenticated.suffix">
+          , puede intentar con las cuentas predeterminadas:<br />- Administrador (usuario="admin" y contraseña="admin") <br />- Usuario
+          (usuario="user" y contraseña="user").</span>
+      </div> -->
     </div>
   </div>
 </div>
